# rune

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
reader/: models.py  parsers.py  urls.py  utils.py  views.py
reader/templates/: feed.html  header.html  main.html  wait.html
rune/: asgi.py  settings.py  urls.py  wsgi.py
static/: styles.css
