[tool.poetry]
name = "rune"
version = "0.1.0"
description = ""
authors = ["eidolonzx <eidolonzx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
pillow = "^10.2.0"
feedparser = "^6.0.11"
requests = "^2.31.0"
bs4 = "^0.0.2"
fake-useragent = "^1.5.1"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
